--- a/index.html
+++ b/index.html
@@ -6,35 +6,54 @@
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+
 </head>
 <body>
-<h1>Train Schedule</h1>
+  <h1>Train Schedule</h1>
 
-<center>
-<table style="width:60%">
-  <tr>
-    <th>Train Name</th>
-    <th>Destination</th> 
-    <th>Frequency(min)</th>
-  </tr>
-  <tr>
-    <td>Train1</td>
-    <td>Dest1</td>
-    <td>50</td>
-  </tr>
-  <tr>
-    <td>Train2</td>
-    <td>Dest2</td>
-    <td>94</td>
-  </tr>
-  <tr>
-    <td>Train3</td>
-    <td>Dest3</td>
-    <td>80</td>
-  </tr>
-</table>
-</center>
+  <!-- Centered Train Schedule --> 
+  <center>
+  <table style="width:50%" id="schedule">
+    <thead>
+    <tr>
+      <th class="train">Train Name</th>
+      <th class="dest">Destination</th> 
+      <th class="freq">Frequency(min)</th>
+      <th class="next">Next Arrival</th>
+      <th class="minAway">Minutes Away</th>
+    </tr>
+    </thead>
+    <tbody id="add-train-row">
+    </tbody>
+  </table>
+  </center>
+
+  <!-- New Train Form -->
+  <form role="form">
+    <div class="form-group">
+      <label for="train-name-input">Train name</label>
+      <input class="form-control" id="train-name-input" type="text">
+    </div>
+    <div class="form-group">
+      <label for="destination-input">Destination</label>
+      <input class="form-control" id="destination-input" type="text">
+    </div>
+    <div class="form-group">
+      <label for="train-time-input">First Train Time (military time)</label>
+      <input class="form-control" id="train-time-input" type="text">
+    </div>
+    <div class="form-group">
+      <label for="frequency-input">Frequency(min)</label>
+      <input class="form-control" id="frequency-input" type="number">
+    </div>
+    <button class="btn btn-default" id="add-train" type="submit">Submit</button>
+  </form>
+
+  <div id="test"></div>
+
 </body>
+<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script src="http://momentjs.com/downloads/moment.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
 <script src="assets/javascript/app.js"></script>
 </html>
